--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,17 @@
         <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
     </context-param>
 
+  <!--  security filter --> 
+  <filter>  
+     <filter-name>SecurityFilter</filter-name>  
+     <filter-class>com.rupp.spring.security.SecurityFilter</filter-class>  
+</filter> 
+   
+<filter-mapping>  
+    <filter-name>SecurityFilter</filter-name>  
+    <url-pattern>/api/*</url-pattern>  
+</filter-mapping>  
+
     <servlet>
         <servlet-name>spring-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
